# crypto-trading-platform

./: .gitignore  CMakeLists.txt  IMPLEMENTATION.md  QUICKSTART.md  README.md  claude.md
config/: api_keys.json.example  config.json  pairlist_config.json
examples/: CMakeLists.txt  basic_usage_example.cpp  full_demo_example.cpp  pairlist_example.cpp
include/trading/: pair_filter.h  pair_list_manager.h  pair_types.h
include/utils/: config.h  crypto_utils.h  logger.h  time_utils.h
src/trading/: pair_filter.cpp  pair_list_manager.cpp
src/utils/: config.cpp  crypto_utils.cpp  logger.cpp  time_utils.cpp
tests/: CMakeLists.txt
tests/utils_tests/: config_test.cpp  crypto_utils_test.cpp  logger_test.cpp  time_utils_test.cpp
